VM issues warning failure to find kernel32.dll on Windows nanoserver

XMLWordPrintable

    • 23
    • b17
    • x86_64
    • windows

        When trying to run jdk-23+37 on Windows nanoserver container, the VM
        initilization throws up the warning:

        OpenJDK 64-Bit Server VM warning: Failed to determine whether the OS can retrieve version information from kernel32.dll: The system cannot find the file specified

        To recreate, start a Windows nanoserver:
        docker run -it mcr.microsoft.com/windows/nanoserver:ltsc2022 cmd.exe
        # download jdk-23+37...
        java -version

        I am unclear of the consequences of this warning, or usability of the VM??

        I suspect this is because on Windows nanoserver kernel32.dll is not within the
        System32 directory itself but within the "forwarders" sub-folder.
        Thus this logic probably needs fixing: https://github.com/openjdk/jdk/blob/08a2f841ec78a10f8d6d54b2ac3a92e89f765f14/src/hotspot/os/windows/os_windows.cpp#L4101

              Assignee:
              George Adams
              Reporter:
              Andrew Leonard
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: