8340383: VM issues warning failure to find kernel32.dll on Windows nanoserver